--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/elements": "^2.6.5",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
+    "@reduxjs/toolkit": "^2.9.1",
     "phosphor-react-native": "^3.0.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.17.1",
-    "react-native-svg": "^15.14.0"
+    "react-native-svg": "^15.14.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
