--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/elements": "^2.6.5",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "@reduxjs/toolkit": "^2.9.1",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
     "phosphor-react-native": "^3.0.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
