--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "phosphor-react-native": "^3.0.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-device-info": "^14.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.17.1",
     "react-native-svg": "^15.14.0",
