--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.9.1",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "axios": "^1.6.8",
     "phosphor-react-native": "^3.0.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
