--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-device-info": "^14.1.1",
+    "react-native-maps": "^1.26.18",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.17.1",
     "react-native-svg": "^15.14.0",
