--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,11 @@ if linkage != nil
 end
 
 target 'petmatch' do
+
+ rn_maps_path = '../node_modules/react-native-maps'
+ pod 'react-native-maps/Google', :path => rn_maps_path
+ pod 'GooglePlaces', :modular_headers => true
+
   config = use_native_modules!
 
   use_react_native!(
