--- a/ios/petmatch/Info.plist
+++ b/ios/petmatch/Info.plist
@@ -33,10 +33,18 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Precisamos acessar sua localização mesmo em segundo plano para manter a navegação e o rastreamento funcionando corretamente.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Precisamos acessar sua localização mesmo quando o app estiver em segundo plano.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Precisamos da sua localização para mostrar sua posição no mapa e calcular rotas.</string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
