--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/elements": "^2.6.5",
     "@react-navigation/native": "^7.1.18",
@@ -25,6 +26,7 @@
     "react-native": "0.82.1",
     "react-native-device-info": "^14.1.1",
     "react-native-maps": "^1.26.18",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.17.1",
     "react-native-svg": "^15.14.0",
