--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "ios:simulator": "npx react-native run-ios --simulator \"iPhone 16 Pro Max\"",
+    "ios:simulator": "npx react-native run-ios --simulator \"iPhone 16 Pro Max (iOS 18.2)\"",
     "lint": "eslint .",
     "start": "react-native start",
+    "watchman": "watchman watch-del-all",
     "test": "jest"
   },
   "dependencies": {
