--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@eva-design/eva": "^2.2.0",
+    "@gluestack-ui/core": "^3.0.10",
+    "@gluestack-ui/utils": "^3.0.11",
+    "@legendapp/motion": "^2.3.0",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/bottom-tabs": "^7.7.2",
@@ -21,12 +23,13 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "@reduxjs/toolkit": "^2.9.1",
-    "@ui-kitten/components": "^5.3.1",
-    "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.6.8",
     "lottie-react-native": "^7.3.4",
+    "nativewind": "^4.1.23",
     "phosphor-react-native": "^3.0.1",
     "react": "19.1.1",
+    "react-aria": "^3.33.0",
+    "react-dom": "^19.2.0",
     "react-native": "0.82.1",
     "react-native-device-info": "^14.1.1",
     "react-native-maps": "^1.26.18",
@@ -35,8 +38,12 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.17.1",
     "react-native-svg": "^15.14.0",
+    "react-native-web": "^0.21.2",
     "react-native-worklets": "0.6.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-stately": "^3.39.0",
+    "tailwind-variants": "^0.1.20",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -52,10 +59,12 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
+    "autoprefixer": "^10.4.21",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "patch-package": "^8.0.1",
+    "postcss": "^8.5.6",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
