--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.17.1",
-    "react-native-svg": "15.12.0",
+    "react-native-svg": "^15.14.0",
     "react-native-web": "^0.21.2",
     "react-native-worklets": "0.6.1",
     "react-redux": "^9.2.0",
