add push ios e android

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,7 +18,10 @@ target 'petmatch' do
   rn_maps_path = '../node_modules/react-native-maps'
   pod 'react-native-maps/Google', :path => rn_maps_path
   pod 'GooglePlaces', :modular_headers => true
-
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'FirebaseMessaging', :modular_headers => true
+  
   config = use_native_modules!
 
   use_react_native!(
@@ -34,5 +37,15 @@ target 'petmatch' do
       :mac_catalyst_enabled => false,
       # :ccache_enabled => true
     )
+
+    # Fix modular headers para Firebase e GoogleUtilities
+    installer.pods_project.targets.each do |target|
+      if target.name.start_with?('Firebase', 'GoogleUtilities')
+        target.build_configurations.each do |config|
+          config.build_settings['DEFINES_MODULE'] = 'YES'
+          config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+        end
+      end
+    end
   end
 end
