--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@gluestack-ui/utils": "^3.0.11",
     "@legendapp/motion": "^2.4.0",
     "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-firebase/app": "23.5.0",
+    "@react-native-firebase/messaging": "23.5.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/bottom-tabs": "^7.7.2",
     "@react-navigation/elements": "^2.6.5",
